[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ledderTile.png" type="Texture" id=1]
[ext_resource path="res://assets/ledderTop.png" type="Texture" id=2]
[ext_resource path="res://game_behavior/ledder_behavior/code/ledder.gd" type="Script" id=3]

[node name="ledder" type="Node2D"]
script = ExtResource( 3 )

[node name="top" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )
centered = false
offset = Vector2( 1, 0 )

[node name="ledderBody" type="Sprite" parent="."]
position = Vector2( 0, 4 )
z_index = -1
texture = ExtResource( 1 )
centered = false
offset = Vector2( 1, 0 )
region_enabled = true
region_rect = Rect2( 0, 0, 14, 0 )

[node name="floor" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="area" type="Area2D" parent="."]
position = Vector2( 0, 4 )

[node name="shape" type="CollisionShape2D" parent="area"]
position = Vector2( 8, 0 )

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
